Update build for Java-16