@@ -31,15 +31,15 @@ repositories {
 }
 
 java {
-    sourceCompatibility = JavaVersion.toVersion('15')
-    targetCompatibility = JavaVersion.toVersion('15')
+    sourceCompatibility = JavaVersion.toVersion('16')
+    targetCompatibility = JavaVersion.toVersion('16')
 }
 
 // Setup the java execution process
 mainClassName = "com.jongsoft.finance.Application"
 tasks.withType(JavaExec) {
     classpath += configurations.developmentOnly
-    jvmArgs('-XX:TieredStopAtLevel=1', '-Dcom.sun.management.jmxremote', '--enable-preview')
+    jvmArgs('-XX:TieredStopAtLevel=1', '-Dcom.sun.management.jmxremote')
 }
 
 // Setup for the NPM build for standalone application
